# secfirstgw-rs

./: .dockerignore  .gitignore  .sfgw-dev  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cross  HARDWARE.md  Makefile  NAS.md  NETWORK-NAS.md  NETWORK.md  README.md  ROADMAP.md  SECURITY-DESIGN.md  docker-compose.yml
.cargo/: config.toml
.claude/projects/-run-media-kevin-KioxiaNVMe-sec-secfirstgw-rs/memory/: MEMORY.md  feedback_careful_rm.md  project_kernel_repo.md  project_nas_kernel_port.md  project_nas_mvp_goal.md  project_nas_production_issues.md  project_nas_storage_tiering.md  project_nas_target_device.md  project_unvr_hardware_profile.md  project_unvr_led_mapping.md
.github/workflows/: build.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-data-model/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-switch-asic/: 02-01-PLAN.md  02-01-SUMMARY.md  02-01-VERIFICATION.md
.planning/phases/03-network-enforcement/: 03-01-PLAN.md  03-01-SUMMARY.md  03-01-VERIFICATION.md
.planning/phases/04-api/: 04-01-PLAN.md  04-01-SUMMARY.md  04-01-VERIFICATION.md
.planning/phases/05-web-ui/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
crates/sfgw-adopt/: Cargo.toml
crates/sfgw-adopt/src/: ca.rs  inform.rs  lib.rs  protocol.rs  signing.rs
crates/sfgw-adopt/tests/: adopt_tests.rs
crates/sfgw-api/: Cargo.toml
crates/sfgw-api/src/: auth.rs  e2ee.rs  events.rs  lib.rs  middleware.rs  ratelimit.rs  tls.rs
crates/sfgw-api/tests/: api_routes_test.rs  auth_e2ee_test.rs
crates/sfgw-cli/: Cargo.toml
crates/sfgw-cli/src/: main.rs  update.rs
crates/sfgw-controller/: Cargo.toml
crates/sfgw-controller/src/: lib.rs
crates/sfgw-crypto/: Cargo.toml
crates/sfgw-crypto/src/: credential.rs  db_key.rs  lib.rs  secure_mem.rs
crates/sfgw-crypto/tests/: crypto_tests.rs
crates/sfgw-db/: Cargo.toml
crates/sfgw-db/migrations/: 001_initial.sql  002_firmware_manifests.sql  003_wan_config.sql  004_networks.sql  005_vlan_trunk_model.sql  006_wireless_networks.sql  007_ddns.sql  008_wan_health_config.sql  009_qos_rules.sql  010_custom_zones.sql  011_wireless_advanced.sql  012_upnp_mappings.sql  013_firmware_settings.sql  014_log_keys.sql  015_site_mesh.sql
crates/sfgw-db/src/: lib.rs
crates/sfgw-display/: Cargo.toml
crates/sfgw-display/src/: framebuffer.rs  hd44780.rs  lcm.rs  lib.rs  ulcmd.rs
crates/sfgw-dns/: Cargo.toml
crates/sfgw-dns/src/: lib.rs
crates/sfgw-dns/src/templates/: dnsmasq.conf.tera
crates/sfgw-fw/: Cargo.toml
crates/sfgw-fw/src/: ids_response.rs  lib.rs  nft.rs  qos.rs  upnp.rs  wan.rs
crates/sfgw-fw/src/iptables/: mod.rs  tests.rs
crates/sfgw-fw/tests/: zone_matrix_tests.rs
crates/sfgw-hal/: Cargo.toml
crates/sfgw-hal/src/: identity.rs  lib.rs
crates/sfgw-ids/: Cargo.toml
crates/sfgw-ids/src/: alert.rs  arp.rs  collector.rs  dhcp.rs  dns.rs  lib.rs  vlan.rs
crates/sfgw-ids/tests/: ids_tests.rs
crates/sfgw-inform/: Cargo.toml
crates/sfgw-inform/src/: codec.rs  crypto.rs  handler.rs  lib.rs  packet.rs  payload.rs  port_config.rs  provision.rs  rate.rs  state.rs  system_cfg.rs
crates/sfgw-lcd/: Cargo.toml
crates/sfgw-lcd/src/: lib.rs
crates/sfgw-log/: Cargo.toml
crates/sfgw-log/src/: layer.rs  lib.rs
crates/sfgw-nas/: Cargo.toml
crates/sfgw-nas/src/: lib.rs
crates/sfgw-net/: Cargo.toml
crates/sfgw-net/src/: ddns.rs  lib.rs  rtl8370mb.rs  smi.rs  switch.rs  wan.rs  wireless.rs
crates/sfgw-personality/: Cargo.toml
crates/sfgw-personality/src/: honeypot.rs  lib.rs  messages.rs
crates/sfgw-vpn/: Cargo.toml
crates/sfgw-vpn/src/: config.rs  db.rs  ipsec.rs  keys.rs  lib.rs  peer.rs  site.rs  tunnel.rs  userspace.rs
crates/sfgw-vpn/tests/: vpn_tests.rs
crates/sfnas-api/: Cargo.toml
crates/sfnas-api/src/: auth.rs  e2ee.rs  error.rs  lib.rs  middleware.rs  ratelimit.rs  tls.rs
crates/sfnas-api/src/routes/: ad.rs  auth.rs  mod.rs  oauth.rs  shares.rs  status.rs  storage.rs  system.rs  users.rs
crates/sfnas-cli/: Cargo.toml
crates/sfnas-cli/src/: main.rs
crates/sfnas-share/: Cargo.toml
crates/sfnas-share/src/: error.rs  lib.rs  rsync.rs  samba.rs  share.rs  user.rs
crates/sfnas-storage/: Cargo.toml
crates/sfnas-storage/src/: bay.rs  crypt.rs  disk.rs  disk_cache.rs  error.rs  filesystem.rs  led_service.rs  lib.rs  raid.rs  thermal.rs
docs/: ARCHITECTURE.md  QUICKSTART.md  SECURITY.md  WHY.md  h1-crossref-2026-03-20.md  inform-adoption-flow.md  inform_dump_usf5p.json  security-audit-2026-03-20.md
patches/ssh-key-0.6.7/: .cargo_vcs_info.json
patches/ssh-key-0.6.7/src/private/: rsa.rs
scripts/: clean-and-install.sh  dev-deploy.sh  nas-build.Dockerfile  nas-deploy.sh  nas-firewall.nft  secfirstnas.initd
tools/ssh-diag/: Cargo.toml
tools/ssh-diag/src/: main.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web-nas/: index.html  package-lock.json  package.json
web-nas/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web-nas/src/components/: BayVisualization.tsx  DiskCard.tsx  Layout.tsx  RaidStatus.tsx  ShareForm.tsx  StatusBadge.tsx  UserForm.tsx
web-nas/src/components/ui/: Card.tsx  DonutChart.tsx  EmptyState.tsx  MiniGauge.tsx  Modal.tsx  Select.tsx  StatCard.tsx  Toggle.tsx  index.ts
web-nas/src/pages/: Dashboard.tsx  Login.tsx  Setup.tsx  Shares.tsx  Storage.tsx  System.tsx
web-nas/src/pages/settings/: ActiveDirectory.tsx  OAuthSettings.tsx
web-nas/src/pages/setup/: SetupWizard.tsx  Step0_Discovery.tsx  Step1_AdminUser.tsx  Step2_DeviceMode.tsx  Step3_BayAssignment.tsx  Step4_RaidConfig.tsx  (+2 more)
web/src/: App.tsx  api.ts  boot.ts  crypto.ts  index.css
web/src/components/: Layout.tsx  StatusCard.tsx  Table.tsx
web/src/hooks/: useStatus.tsx  useToast.tsx
web/src/pages/: Dashboard.tsx  Ddns.tsx  Devices.tsx  Firewall.tsx  Ids.tsx  Inform.tsx  Interfaces.tsx  Login.tsx  Logs.tsx  Network.tsx  Qos.tsx  Settings.tsx  Setup.tsx  Update.tsx  Upnp.tsx  Vpn.tsx  Wan.tsx  Wireless.tsx  Zones.tsx
(+23 files in other folders)
