[workspace]
resolver = "2"
members = [
    "crates/sfgw-fw",
    "crates/sfgw-net",
    "crates/sfgw-controller",
    "crates/sfgw-crypto",
    "crates/sfgw-hal",
    "crates/sfgw-vpn",
    "crates/sfgw-dns",
    "crates/sfgw-lcd",
    "crates/sfgw-nas",
    "crates/sfgw-api",
    "crates/sfgw-db",
    "crates/sfgw-log",
    "crates/sfgw-adopt",
    "crates/sfgw-ids",
    "crates/sfgw-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/bcyangkmluohmars/secfirstgw-rs"
authors = ["bcyangkmluohmars"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Networking
netlink-packet-route = "0.21"
rtnetlink = "0.15"
# Web API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
# Database
rusqlite = { version = "0.32", features = ["bundled"] }
# Memory security
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
# Crypto — classical
ring = "0.17"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
x25519-dalek = "2"
ed25519-dalek = { version = "2", features = ["hazmat"] }
# Crypto — post-quantum (NIST FIPS 203/204)
ml-kem = "0.2"
ml-dsa = "0.1"
# VPN
boringtun = "0.6"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# DNS/DHCP config
tera = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1"
thiserror = "2"
# CLI
clap = { version = "4", features = ["derive"] }
# NAS
ksmbd-control = "0.1"
nfs-server = "0.1"
# Disk encryption
libcryptsetup-rs = "0.9"
# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["net", "ioctl", "fs"] }
