[workspace]
resolver = "2"
members = [
    "crates/sfgw-fw",
    "crates/sfgw-net",
    "crates/sfgw-controller",
    "crates/sfgw-crypto",
    "crates/sfgw-hal",
    "crates/sfgw-vpn",
    "crates/sfgw-dns",
    "crates/sfgw-display",
    "crates/sfgw-nas",
    "crates/sfgw-api",
    "crates/sfgw-db",
    "crates/sfgw-log",
    "crates/sfgw-adopt",
    "crates/sfgw-inform",
    "crates/sfgw-ids",
    "crates/sfgw-personality",
    "crates/sfgw-cli",
]
exclude = ["tools/ssh-diag"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/bcyangkmluohmars/secfirstgw-rs"
authors = ["bcyangkmluohmars"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Networking
netlink-packet-route = "0.21"
rtnetlink = "0.15"
# Web API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
# Database
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
# Memory security
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
# Crypto — classical
ring = "0.17"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
x25519-dalek = "2"
ed25519-dalek = { version = "2", features = ["hazmat"] }
# Crypto — post-quantum (NIST FIPS 203/204)
fips203 = "0.4"
fips204 = "0.4"
# VPN
boringtun = "0.7"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# DNS/DHCP config
tera = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1"
thiserror = "2"
# CLI
clap = { version = "4", features = ["derive"] }
# NAS
ksmbd-control = "0.1"
nfs-server = "0.1"
# Disk encryption
libcryptsetup-rs = "0.9"
# HTTP client (for DDNS updates)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
http-body-util = "0.1"
nix = { version = "0.29", features = ["net", "ioctl", "fs", "term"] }
libc = "0.2"
# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
# SSH client (for Ubiquiti device provisioning)
russh = "0.49"
russh-keys = "0.49"

# Patch ssh-key to accept 1024-bit RSA host keys — older UniFi AP firmware
# (UAP-AC-Pro, UAP-AC-LR) ships Dropbear with only 1024-bit RSA, no ed25519/ecdsa.
[patch.crates-io]
ssh-key = { path = "patches/ssh-key-0.6.7" }
