[package]
name = "sfgw-adopt"
description = "Device adoption protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
rusqlite.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
ring.workspace = true
x25519-dalek = { workspace = true, features = ["static_secrets"] }
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
fips203.workspace = true
fips204.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
