[package]
name = "sfgw-api"
description = "axum web API and UI server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
argon2.workspace = true
uuid.workspace = true
chrono.workspace = true
ring.workspace = true
rusqlite.workspace = true
