[package]
name = "sfgw-api"
description = "axum web API and UI server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-fw = { path = "../sfgw-fw" }
sfgw-net = { path = "../sfgw-net" }
sfgw-vpn = { path = "../sfgw-vpn" }
sfgw-dns = { path = "../sfgw-dns" }
sfgw-ids = { path = "../sfgw-ids" }
sfgw-adopt = { path = "../sfgw-adopt" }
sfgw-hal = { path = "../sfgw-hal" }
sfgw-personality = { path = "../sfgw-personality" }
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
argon2.workspace = true
uuid.workspace = true
chrono.workspace = true
ring.workspace = true
fips203.workspace = true
rusqlite.workspace = true
base64.workspace = true
http-body-util.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
axum-server.workspace = true
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true
tracing-subscriber.workspace = true
futures-core = "0.3"

[dev-dependencies]
x25519-dalek = { workspace = true, features = ["static_secrets"] }
ring.workspace = true
tower.workspace = true
http-body-util.workspace = true
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
base64.workspace = true
tempfile = "3"
rand = "0.8"
