[package]
name = "sfgw-controller"
description = "Network controller logic and device management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-hal = { path = "../sfgw-hal" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
