[package]
name = "sfgw-controller"
description = "Network controller logic and device management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-hal = { path = "../sfgw-hal" }
sfgw-adopt = { path = "../sfgw-adopt" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
