[package]
name = "sfgw-crypto"
description = "LUKS2 full-disk encryption with hardware-derived key material"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-hal = { path = "../sfgw-hal" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true
libc.workspace = true
ring.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
