[package]
name = "sfgw-db"
description = "SQLite database layer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
sfgw-crypto = { path = "../sfgw-crypto" }
zeroize.workspace = true
