[package]
name = "sfgw-display"
description = "Display abstraction with pluggable backends (HD44780 character LCD, framebuffer touchscreen)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-hal = { path = "../sfgw-hal" }
anyhow.workspace = true
libc.workspace = true
nix.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
