[package]
name = "sfgw-dns"
description = "DNS/DHCP — dnsmasq configuration generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
anyhow.workspace = true
tokio.workspace = true
tera.workspace = true
tracing.workspace = true
