[package]
name = "sfgw-dns"
description = "DNS/DHCP — dnsmasq configuration generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tera.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rusqlite.workspace = true
nix = { version = "0.29", features = ["net", "ioctl", "fs", "signal", "process"] }
