[package]
name = "sfgw-ids"
description = "Distributed intrusion detection — ARP spoofing, DHCP spoofing, rogue AP, VLAN hopping"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-hal = { path = "../sfgw-hal" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
