[package]
name = "sfgw-log"
description = "Forward-secret encrypted logging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-crypto = { path = "../sfgw-crypto" }
ring.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
base64.workspace = true
zeroize.workspace = true
tokio.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
