[package]
name = "sfgw-nas"
description = "SMB/NFS file sharing services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-hal = { path = "../sfgw-hal" }
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
