[package]
name = "sfgw-net"
description = "Network configuration via rtnetlink"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-hal = { path = "../sfgw-hal" }
anyhow.workspace = true
tokio.workspace = true
rtnetlink.workspace = true
tracing.workspace = true
