[package]
name = "sfgw-net"
description = "Network interface detection and configuration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-fw = { path = "../sfgw-fw" }
sfgw-hal = { path = "../sfgw-hal" }
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
libc.workspace = true
url = "2"
