[package]
name = "sfgw-personality"
description = "sassy error messages, honeypot, and other personality traits"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
anyhow.workspace = true
rand = "0.8"
rusqlite.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "macros"] }
tracing.workspace = true
