[package]
name = "sfgw-vpn"
description = "WireGuard (boringtun) and OpenVPN multi-core VPN services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
x25519-dalek = { workspace = true, features = ["static_secrets"] }
base64.workspace = true
rand = "0.8"
