[package]
name = "sfgw-vpn"
description = "WireGuard (boringtun) userspace VPN tunnel management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sfgw-db = { path = "../sfgw-db" }
sfgw-crypto = { path = "../sfgw-crypto" }
sfgw-fw = { path = "../sfgw-fw" }
anyhow.workspace = true
tokio = { workspace = true, features = ["full", "io-util", "net", "sync"] }
tracing.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
x25519-dalek = { workspace = true, features = ["static_secrets"] }
base64.workspace = true
boringtun.workspace = true
rand = "0.8"
libc.workspace = true
ip_network = "0.4"
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
