[package]
name = "ssh-diag"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
russh = "0.49"
russh-keys = "0.49"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"

# Same patch as main workspace — accept 1024-bit RSA host keys
[patch.crates-io]
ssh-key = { path = "../../patches/ssh-key-0.6.7" }
